
name:                awesomium-raw
version:             0.1.0.0
synopsis:            Low-level Awesomium bindings.
license:             LGPL-3
license-file:        LICENSE
author:              Maksymilian Owsianny
maintainer:          Maksymilian.Owsianny+AwesomiumRaw@gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8
--extra-source-files:  cbits/keyb.h

library
  exposed-modules:  Graphics.UI.Awesomium.Raw
  build-tools:      c2hs
  build-depends:    base ==4.5.*
  hs-source-dirs:   src
  include-dirs:     include
  includes:         keyb.h
  c-sources:        cbits/keyb.c
  extra-libraries:  awesomium-1.6.5
  extra-lib-dirs:   /usr/lib/awesomium-1.6.5
  --ghc-options:      -Wall
  cc-options:       -ffast-math -std=gnu99
